--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </ul>
                         <div class="social_list">
                              <div class="social_link">
-                                <a href="https://www.instagram.com/pedroaugustogama/" target="_blank"><i class='bx bxl-instagram'></i></a>
+                                <a href="https://www.instagram.com/multiplicando_fortunas/" target="_blank"><i class='bx bxl-instagram'></i></a>
                              </div>
                              <div class="social_link">
                                 <a href="https://www.facebook.com/profile.php?id=100094851262933" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
