Troca-da-Logo-Ebook

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="container">
                 <div class="about_container">
                     <div class="about_banner">
-                        <img src="./asset/Story_Instagram_ebook_rabiscos_moderno_branco_e_azul-removebg-preview-removebg-preview.png" alt="about_banner" class="img_cover">
+                        <img src="./asset/77 Reais por (3).png" alt="about_banner" class="img_cover">
                     </div>
 
                     <div class="about_content">
