Update-Button-Video

--- a/index.html
+++ b/index.html
@@ -155,11 +155,19 @@
                                 <a href="https://www.tiktok.com/@multiplicandofortunas" target="_blank"><i class='bx bxl-tiktok' ></i></a>
                              </div>
                             </div>
-                                <div class="div-video">
-                                    <video crossorigin preload="auto" playsinline autoplay controls
+                               <!--  <div class="div-video">
+                                    <video autoplay controls 
                                      src="asset/0802 (1).mp4"
-                                    </video>
-                              </div>
+                                </video>               
+                              </div> -->
+                              <div class="div-video">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/cO1xHrhDkYo" 
+                                title="YouTube video player" frameborder="0" allow="accelerometer; 
+                                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                            </iframe>  
+                            <a class="button-video" href="https://pay.kiwify.com.br/fcLeJIJ" target="_blank">Compre Agora!!</a>             
+                          </div>
+                             
                             </div>   
                         </div>
                         </div>
